lab3 - AuthenticationGG_DB_Valid